kubernetes/longhorn/longhorn-ingressroutes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: cert-manager
  annotations:
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.admin.thelegend27.fr`)
      # middlewares:
      #   - name: forwardauth-authelia
      #     namespace: traefik
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 80

  tls:
    secretName: wildcard-admin-thelegend27-tls
